--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,18 @@
+header {
+    font-size: 2rem;
+}
 
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: grey;
+    font-size: .6rem;
+    font-weight: lighter;
 
-.jeForm {
+}
+
+h2 {
     display: flex;
     flex-direction: column;
+    width: 50%;
+    font-size: .75rem;
 }
