--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,19 @@
 @import "./form.css";
-
+@import "./log.css";
 
 header {
-    font-size: 2rem;
+    font-size: xx-large;
 }
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: grey;
-    font-size: .6rem;
-    font-weight: lighter;
+}
 
+h2 {
+    font-size: large;
+    font-weight: normal;
+    color: grey;
 }
 
 .container__content { 
@@ -29,5 +32,10 @@ body {
 
 .container__list { 
     font-size: small;
-    color: black;
+    color: grey;
+}
+
+footer {
+    margin: 4rem 0 0 0;
+    font-size: smaller;
 }
