--- a/styles/main.css
+++ b/styles/main.css
@@ -1,13 +1,13 @@
 @import "./form.css";
 @import "./log.css";
 
-header {
-    font-size: xx-large;
-}
-
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: grey;
+}
+
+h1 {
+    font-size: xx-large;
 }
 
 h2 {
